Fixes Navbar and mobile spacing

--- a/_sass/footer.scss
+++ b/_sass/footer.scss
@@ -17,7 +17,7 @@
       font-size: 0;
     }
     .icon {
-      color: #00264D;
+      fill: #00264D;
       background-color: #fff;
       padding: 0.2em 0.4em;
       border-radius: 100%;
