--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -373,9 +373,17 @@ button.baguetteBox-button {
   }
 }
 
+.max-width-full {
+  max-width: 100%;
+}
+
 .anchor-spacer:before {
   content: "";
   display: block;
-  padding-top: 148px; /* header height + empty space */
-  margin-top: -100px; /* header height to degrees padding’s space */
+  padding-top: 98px; /* header height + empty space */
+  margin-top: -50px; /* header height to degrees padding’s space */
+  @media screen and (min-width: $grid-breakpoints-lg) {
+    padding-top: 148px; /* header height + empty space */
+    margin-top: -100px; /* header height to degrees padding’s space */
+  }
 }
